# Shir0GL

./: CMakeLists.txt  Color.cpp  Color.h  Color32.cpp  Color32.h  GAME2012_A4_MitchellJames.vcxproj  GAME2012_A4_MitchellJames.vcxproj.filters  Matrix3f.cpp  Matrix3f.h  README.md  SOGL.sln  SOGL.vcxproj  SOGL.vcxproj.filters  Shir0GL.cpp  Shir0GL.sln  Shir0GL.vcxproj  Shir0GL.vcxproj.filters  include.rar  pch.h  quat.cpp  quat.h  soglConfig.h.in  test.chunk  vec3f.cpp  vec3f.h
assets/materials/: litMat.mat  normalMat.mat  texCoordMat.mat  viviMat.mat  viviWandMat.mat
assets/mesh/: vivi.mtl
assets/shader/: debug-points.frag  debug-points.vert  default.frag  default.vert  lit.frag  lit.vert  normal_color.frag  tcoord_color.frag  texture.frag  voxel.frag  voxel.vert
common/: main.cpp
common/sogl/: bitmanip.hpp  hashTable.hpp  linkedList.h  linkedList.hpp  mathutil.hpp  pair.hpp
common/sogl/noise/src/: fastNoise.cpp
common/sogl/rendering/: GLError.hpp  Material.h  Texture.h  camera.hpp  cameraData.hpp  color.hpp  color32.hpp  glUtilities.h  glUtilities.hpp  light.hpp  material.hpp  mesh.hpp  renderable.hpp  shaderProgram.hpp  shaderUtilities.hpp  texture.hpp  vertexArrayObject.hpp  vertexBufferObject.hpp
common/sogl/rendering/factories/: AssetFactory.h  FactoryUtils.h  MaterialFactory.h  MeshFactory.h  ModelFactory.h  ShaderFactory.h  TextureFactory.h  lightFactory.hpp  materialFactory.hpp  shaderFactory.hpp  textureFactory.hpp  uniformBufferFactory.hpp
common/sogl/rendering/factories/src/: lightFactory.cpp  materialFactory.cpp  meshFactory.cpp  shaderFactory.cpp  textureFactory.cpp  uniformBufferFactory.cpp
common/sogl/rendering/gl/: GLBuffer.h  GLMappedBuffer.h  GLUniform.h  Model.h  ShaderProgram.h  UniformBuffer.h  VertexArray.h  mappedBuffer.h  shaderProgram.hpp  uniformBufferObject.hpp  vertexArrayObject.hpp
common/sogl/rendering/gl/mesh/: InstancedMesh.h  Mesh.h  MeshUtils.h
common/sogl/rendering/gl/mesh/src/: InstancedMesh.cpp  Mesh.cpp
common/sogl/rendering/gl/src/: GLBuffer.cpp  GLMappedBuffer.cpp  GLUniform.cpp  Model.cpp  ShaderProgram.cpp  UniformBuffer.cpp  VertexArray.cpp  mappedBuffer.cpp  shaderUtilities.cpp  uniformBufferObject.cpp  vertexArrayObject.cpp
common/sogl/rendering/src/: camera.cpp  color.cpp  glUtilities.cpp  light.cpp  material.cpp  mesh.cpp  renderable.cpp  shaderProgram.cpp  shaderUtilities.cpp  texture.cpp  vertexArrayObject.cpp  vertexBufferObject.cpp
common/sogl/structure/: Array.h  Dictionary.h  Hasher.h  bitSet.h  hashTable.hpp  linkedList.h  octree.h  pair.h  pair.hpp  priorityQueue.h  queue.h  runLengthEncoding.h
common/sogl/structure/src/: Hasher.cpp
common/sogl/transform/: matrix3f.hpp  matrix4f.hpp  matrixNf.hpp  quat.hpp  quatd.hpp  transform.hpp  vec3f.hpp  vec3i.hpp  vec4f.hpp
common/sogl/transform/src/: matrix.cpp  vectors.cpp
common/sogl/world/data/: FaceDirection.hpp  chunk.h  chunkMesh.h
common/sogl/world/data/src/: chunk.cpp  chunkMesh.cpp
include/: CMakeLists.txt  camera.h  color.h  color32.h  color32.inl  math.h  mathutil.h  matrix3f.h  matrix4f.h  pch.h  quat.h  quat.inl  transform.h  transform.inl  vec3f.h  vec3f.inl  vec4f.h  vec4f.inl
include/sogl/: camera  color  matrix  transform  vector
include/sogl/math/: common
rendering/: camera.hpp  cameraData.hpp  color.hpp  color.inl  color32.hpp  glfwApp.hpp  renderable.hpp
rendering/mesh/: mesh.hpp  vertexArrayObject.hpp  vertexAttribute.hpp  vertexBufferObject.hpp
src/: camera.cpp  color.cpp  color32.cpp  glfwApp.cpp  main.cpp  matrix3f.cpp  matrix4f.cpp  pch.cpp  quat.cpp  sogl.cpp  statics.cpp  transform.cpp  vec3f.cpp  vec4f.cpp
src/rendering/: camera.cpp
src/rendering/mesh/: mesh.cpp  vertexArrayObject.cpp  vertexAttribute.cpp  vertexBufferObject.cpp
transform/: CMakeLists.txt  mathutil.hpp  matrix3f.hpp  matrix4f.hpp  quat.hpp  transform.hpp  vec3f.hpp  vec4f.hpp
